add ara scrapper, distance/time matrix generator
se agrega un scrapper para las tiendas de Ara en cartagena.
además de esto, se agrega una función que genera la matriz de distancias
y tiempos, dada una lista de ubicaciones inicial.

Adds a scrapper for the Ara store locations in Cartagena.
In addition, adds a function that generates the dsitances and time
matrices, given a list of locations.

--- a/README.org
+++ b/README.org
@@ -65,3 +65,7 @@ with your key, like this:
 API_key: "yourapikeygoeshere"
   
 #+END_SRC
+** por hacer / things to do
+   - escribir pruebas para la mayoría de funciones
+
+   - write tests for most functions
